Activity y recycler view de factura agregada, boton en carrito de compras agregado

--- a/app/src/main/res/layout/activity_carro_compras.xml
+++ b/app/src/main/res/layout/activity_carro_compras.xml
@@ -32,8 +32,21 @@
         android:gravity="center"
         android:text="0.0"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnComprar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Comprar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/tvTotal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
